--- a/tpl.BAK/filter_box.html
+++ b/tpl.BAK/filter_box.html
@@ -1,11 +1,11 @@
-
 <div class="infolis-filterbox" style="display: none">
   <form role="form">
     <div class="row">
       <div class="form-group">
         <label for="code">Name</label>
-        <input class="form-control input-lg" type="text"/>
+        <input type="text" class="form-control input-lg">
       </div>
     </div>
   </form>
 </div>
+
